# relay-runner

./: .gemini-prompt.md  .gitignore  CLAUDE.md  Info.plist  Package.resolved  Package.swift  README.md  index.html  key_daemon.py  package-lock.json  package.json  start.sh  tts_filter.py  tts_worker.py  vite.config.ts  voice_listen.sh  voice_wrap.py
.github/workflows/: build-dmg.yml
Sources/relay-actions-mcp/: ConfirmationClient.swift  Entry.swift  InputTools.swift  IntrospectionTools.swift  ParentProcess.swift  PermissionPreflight.swift  ProposeActionTool.swift  ScreenshotTool.swift  Server.swift
Sources/relay-orchestrator-mcp/: Entry.swift  HTTPClient.swift  Server.swift  Tools.swift
Sources/relay-runner/: MediaController.swift
Sources/relay-runner/App/: AppState.swift  RelayRunnerApp.swift
VoiceTerminal/: Info.plist  Package.swift
assets/: dmg-background.tiff
docs/: orchestrator.md
docs/specs/: computer-actions.md  relay-actions.md
scripts/: build-dmg.sh  dmgbuild-settings.py  download-models.sh  generate-dmg-background.py  generate-icon.py  relay-bridge  relay-orchestrator  relay-runner.entitlements
services/: config.py  orchestrator.py  orchestrator_workflow.md  preview_voice.py  requirements.txt  tts_filter.py  tts_worker.py  voice_bridge.py  voice_listen.py  voice_wrap.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: KeyCapture.tsx  Settings.tsx
src/styles/: settings.css
stt-sidecar/: Package.swift
(+59 files in other folders)
