[package]
name = "voice-terminal"
version = "0.1.0"
description = "A local voice I/O layer for terminal-based tools"
authors = ["Matt"]
edition = "2021"

[lib]
name = "voice_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
